Install missing tslib package

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular-in-memory-web-api": "^0.9.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.5.1",
+    "tslib": "1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
