--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Example project from an angular.io guide.",
   "scripts": {
-    "lint": "tslint ./src/**/*.ts -t verbose",
+    "lint": "ng lint --format=verbose",
     "start": "ng serve",
     "test": "ng test",
     "test-ci": "ng test --code-coverage --no-watch --no-progress --browsers=ChromeHeadless",
